--- a/co_vi_signal_home.css
+++ b/co_vi_signal_home.css
@@ -6,6 +6,7 @@ body {
 
   #main_wrapper {
     width: 100%;
+    height: 100%;
     margin: auto;
     background-color: #f2f2f2;
   }
@@ -229,4 +230,11 @@ nav {
     height: 50px;
     margin-left: 20px;
     margin-right: 20px;
+  }
+
+  #merci {
+    width: auto;
+    height: 500px;
+    justify-content: center;
+    text-align: center;
   }
